# ObamaS

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: main.yml
src/: lib.rs  macros.rs  main.rs  qemu.rs  test.rs
src/gdt/: mod.rs
src/interrupts/: cpu.rs  hardware.rs  hw.rs  mod.rs
src/mem/: alloc.rs  mod.rs  paging.rs  volatile.rs
src/rand/: hw.rs  mod.rs
src/serial/: mod.rs
src/sync/: lazy.rs  mod.rs  mutex.rs  once.rs
src/time/: mod.rs
src/vga/: mod.rs
tests/: boot.rs  heap_allocation.rs  stack_overflow.rs
